  skipped tests in the junitxml output - which also fixes 
  issue99.

- make py.test.cmdline.main() return the exitstatus instead of raising 
  SystemExit and also allow it to be called multiple times.  This of
  course requires that your application and tests are properly teared 
  down and don't have global state. 

Fixes / Maintenance 
++++++++++++++++++++++

- improve tracebacks presentation: 
  - raises shows shorter more relevant tracebacks

- improve support for raises and other dynamically compiled code by
  manipulating python's linecache.cache instead of the previous
  rather hacky way of creating custom code objects.  This makes 
  it seemlessly work on Jython and PyPy where it previously didn't.

- fix issue96: make capturing more resilient against Control-C 
  interruptions (involved somewhat substantial refactoring
  to the underlying capturing functionality to avoid race 
  conditions).

- fix chaining of conditional skipif/xfail decorators - so it works now 
  as expected to use multiple @py.test.mark.skipif(condition) decorators,
  including specific reporting which of the conditions lead to skipping. 

- fix issue95: late-import zlib so that it's not required 
  for general py.test startup. 

- fix issue94: make reporting more robust against bogus source code
  (and internally be more careful when presenting unexpected byte sequences)


Changes between 1.2.1 and 1.3.0
==================================================

- deprecate --report option in favour of a new shorter and easier to
  remember -r option: it takes a string argument consisting of any
  combination of 'xfsX' characters.  They relate to the single chars
  you see during the dotted progress printing and will print an extra line 
  per test at the end of the test run.  This extra line indicates the exact
  position or test ID that you directly paste to the py.test cmdline in order
  to re-run a particular test. 

- allow external plugins to register new hooks via the new 